--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Whatsapp_contact_recyclerView"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity3"
+            android:name=".WhatsAppChats"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity2"
             android:exported="false" />
@@ -28,7 +29,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".whats_app_contacts"
+            android:name="whats_app_contacts"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
